tests/compile_fail/hash/union.rs
#[derive(derive_more::Hash)]
union IntOrFloat {
    i:u32,
    f:f32,
}

fn main() {}