tests/compile_fail/hash/union.stderr
error: `Hash` cannot be derived for unions
 --> tests/compile_fail/hash/union.rs:2:1
  |
2 | union IntOrFloat {
  | ^^^^^
